@@ -96,7 +96,7 @@ typedef enum {
 - (WebFrameLoadType)_loadType;
 - (void)_goToItem: (WebHistoryItem *)item withFrameLoadType: (WebFrameLoadType)type;
 
--(BOOL)_continueAfterClickPolicyForEvent:(NSEvent *)event;
+-(BOOL)_continueAfterClickPolicyForEvent:(NSEvent *)event request:(WebResourceRequest *)request;
 -(void)_loadURL:(NSURL *)URL loadType:(WebFrameLoadType)loadType clientRedirect:(BOOL)clientRedirect triggeringEvent:(NSEvent *)event;
 - (void)_postWithURL:(NSURL *)URL data:(NSData *)data contentType:(NSString *)contentType;
 - (void)_restoreScrollPosition;
